--- a/.gitconfig
+++ b/.gitconfig
@@ -9,3 +9,5 @@
 	tool = smerge
 [difftool]
 	prompt = false
+[alias]
+    parent = "!git show-branch | grep '*' | grep -v \"$(git rev-parse --abbrev-ref HEAD)\" | head -n1 | sed 's/.*\\[\\(.*\\)\\].*/\\1/' | sed 's/[\\^~].*//' #"
