add gitconfig work profile

--- a/.gitconfig
+++ b/.gitconfig
@@ -1,7 +1,6 @@
 [credential]
 	helper = store
 	UseHttpPath = true
-
 [user]
 	name = knnan
 	email = 28503456+knnan@users.noreply.github.com
@@ -10,4 +9,11 @@
 [difftool]
 	prompt = false
 [alias]
-    parent = "!git show-branch | grep '*' | grep -v \"$(git rev-parse --abbrev-ref HEAD)\" | head -n1 | sed 's/.*\\[\\(.*\\)\\].*/\\1/' | sed 's/[\\^~].*//' #"
+	parent = "!git show-branch | grep '*' | grep -v \"$(git rev-parse --abbrev-ref HEAD)\" | head -n1 | sed 's/.*\\[\\(.*\\)\\].*/\\1/' | sed 's/[\\^~].*//' #"
+	sts = status
+	ch = checkout
+	chb = checkout -b
+	ls= log --oneline
+	di = !git diff | delta --features side-by-side
+[includeIf "gitdir:~/Development/work_code/PCLOUDY/"]
+	path = ~/.gitconfig-work
