--- a/.ssh/conf.d/work.config
+++ b/.ssh/conf.d/work.config
@@ -136,7 +136,7 @@ Host control-server
 Host ansible-test-rbox
     HostName 172.18.21.16
     User radmin
-    ProxyCommand ssh -W %h:%p control-server
+    ProxyCommand ssh -W %h:%p my-dc
     IdentityFile ~/.ssh/keys/pcloudy_all
 
 Host ansible-test-pbox
