--- a/.ssh/config
+++ b/.ssh/config
@@ -1,7 +1,7 @@
 # Read more about SSH config files: https://linux.die.net/man/8/ssh_config
 
 
-Include ~/.ssh/conf.d/config.*
+Include ~/.ssh/conf.d/*.config
 
 Host *
     StrictHostKeyChecking no
