a stable checkpoint for all changes

--- a/.ssh/config.d/work.config
+++ b/.ssh/config.d/work.config
@@ -48,7 +48,6 @@ Host sify_jump_server
     HostName 10.10.60.150
     User radmin
     IdentityFile ~/.ssh/keys/pcloudy_all
-    
 Host my-dc bastion_blr_1
     HostName 172.16.118.34
     User node-team
@@ -148,7 +147,7 @@ Host ansible-test-pbox
 
 # node-stg.pcloudy.com
 
-Host node-pbox
+Host node-pbox node.pbox
     HostName 172.24.70.15
     User padmin
     ProxyCommand ssh -W %h:%p my-dc
@@ -241,6 +240,7 @@ Host artemesia-pbox
     User padmin
     HostName 172.16.112.35
     IdentityFile ~/.ssh/keys/pcloudy_all
+    LocalForward 8000 127.0.0.1:3306
 
 Host artemesia-rbox
     User radmin
@@ -335,3 +335,14 @@ Host bc-private
     HostName 13.200.59.3
     IdentityFile ~/.ssh/keys/BrowserCloudV2_Private_DEV.pem
     user ubuntu
+
+Host pr.stg.backend
+    HostName 13.202.22.197
+    user ubuntu
+    IdentityFile ~/.ssh/keys/pcloudy-stg-backend-us.pem
+Host pr.stg.frontend
+    HostName 13.202.129.210
+    user ubuntu
+    IdentityFile ~/.ssh/keys/pcloudy-stg-frontend-us.pem
+
+
