--- a/.huskyrc
+++ b/.huskyrc
@@ -1,3 +1,8 @@
-# This loads nvm.sh and sets the correct PATH before running hook
-export NVM_DIR="$HOME/.nvm"
-[ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh"
+# fnm
+FNM_PATH="/home/knnan/.local/share/fnm"
+if [ -d "$FNM_PATH" ]; then
+  export PATH="/home/knnan/.local/share/fnm:$PATH"
+  eval "$(fnm env)"
+  # eval "$(fnm env --use-on-cd)"
+fi
+
