fixed fzf-tab integration with custom ssh completions

--- a/.ssh/config.d/work.config
+++ b/.ssh/config.d/work.config
@@ -16,8 +16,8 @@ Host work-laptop
 
 Host ranjan-work
     User ranjan
-    HostName 192.168.1.14
-    IdentityFile ~/.ssh/keys/pcloudy_all
+    HostName 192.168.1.13
+    IdentityFile ~/.ssh/keys/ranjan
 
 # ||============================= VPN AND BASTION SERVERS ====================================||
 
@@ -48,7 +48,7 @@ Host sify_jump_server
     HostName 10.10.60.150
     User radmin
     IdentityFile ~/.ssh/keys/pcloudy_all
-Host my-dc bastion_blr_1
+Host my-dc-orig bastion_blr_1
     HostName 172.16.118.34
     User node-team
     IdentityFile ~/.ssh/keys/pcloudy_all
@@ -56,10 +56,111 @@ Host bastion_blr_2
     HostName 172.16.118.36
     User node-team
     IdentityFile ~/.ssh/keys/pcloudy_all
-Host bastion_sify_1  
+Host bastion_blr_3
+    HostName 172.16.118.51
+    User node-team
+    IdentityFile ~/.ssh/keys/pcloudy_all
+Host my-dc bastion_sify_1  
     HostName  10.10.60.34
     User node-team
     IdentityFile ~/.ssh/keys/pcloudy_all
+    
+
+# DATABASE PORT FORWARDS
+# node.pbox => 8000
+# artemesia-pbox => 8001
+# anon-db  => 8002
+# staging.db  => 8003
+
+Host db.portforward
+    HostName 10.10.60.34
+    User node-team
+    IdentityFile ~/.ssh/keys/pcloudy_all
+    LocalForward 8000 172.24.70.15:3306 
+    LocalForward 8001 172.16.112.35:3306 
+    LocalForward 8002 172.16.113.39:3306 
+    LocalForward 8003 172.24.90.3:3306
+
+
+# ||============================= PRODUCTION SERVERS ====================================||
+
+
+Host sg.pbox
+    User padmin
+    HostName 172.23.50.2
+    ProxyCommand ssh -W %h:%p bastion_blr_3
+    IdentityFile ~/.ssh/keys/pcloudy_all
+
+
+
+    # prodmain
+Host prodmain.pbox
+    User padmin
+    HostName 172.25.25.3
+    ProxyCommand ssh -W %h:%p my-dc
+    IdentityFile ~/.ssh/keys/pcloudy_all
+Host prodmain.rbox.01
+    User radmin
+    HostName 172.25.25.11
+    ProxyCommand ssh -W %h:%p my-dc
+    IdentityFile ~/.ssh/keys/pcloudy_all
+Host prodmain.rbox.02
+    User radmin
+    HostName 172.25.25.12
+    ProxyCommand ssh -W %h:%p my-dc
+    IdentityFile ~/.ssh/keys/pcloudy_all
+Host prodmain.rbox.03
+    User radmin
+    HostName 172.25.25.14
+    ProxyCommand ssh -W %h:%p my-dc
+    IdentityFile ~/.ssh/keys/pcloudy_all
+
+# prodindwest
+Host prodindwest.pbox
+    User padmin
+    HostName 172.24.11.3
+    ProxyCommand ssh -W %h:%p my-dc
+    IdentityFile ~/.ssh/keys/pcloudy_all
+
+# prodindwest2
+Host prodindwest2.pbox
+    User padmin
+    HostName 172.24.10.3
+    ProxyCommand ssh -W %h:%p my-dc
+    IdentityFile ~/.ssh/keys/pcloudy_all
+
+# prodindus
+Host prodindus.pbox
+    User padmin
+    HostName 172.8.8.2
+    ProxyCommand ssh -W %h:%p my-dc
+    IdentityFile ~/.ssh/keys/pcloudy_all
+
+
+Host plive.pbox
+    User padmin
+    HostName 172.24.80.2
+    ProxyCommand ssh -W %h:%p my-dc
+    IdentityFile ~/.ssh/keys/pcloudy_all
+Host plive.rbox.01
+    User radmin
+    HostName 172.24.80.12
+    ProxyCommand ssh -W %h:%p my-dc
+    IdentityFile ~/.ssh/keys/pcloudy_all
+
+Host plive.sub.pbox
+    User padmin
+    HostName 10.8.16.5 
+    ProxyCommand ssh -W %h:%p my-dc
+    IdentityFile ~/.ssh/keys/pcloudy_all
+Host plive.sub.rbox.01
+    User radmin
+    HostName 10.8.16.7 
+    ProxyCommand ssh -W %h:%p my-dc
+    IdentityFile ~/.ssh/keys/pcloudy_all
+
+
+
 
     
 # ||============================= BLR SERVERS ====================================||
@@ -73,6 +174,20 @@ Host pbox-dev
     HostName 172.16.50.12
     IdentityFile ~/.ssh/keys/pbox-dev-key
 
+
+
+# annonymous  
+
+Host anon.pbox
+    User padmin
+    HostName 172.16.113.40
+    IdentityFile ~/.ssh/keys/pcloudy_all
+
+Host anon.db
+    User padmin
+    HostName 172.16.113.39
+    IdentityFile ~/.ssh/keys/pcloudy_all
+
 # appium-dev.pcloudy.com
 Host appium-pbox
     User padmin
@@ -83,18 +198,40 @@ Host appium-rbox
     HostName 10.8.15.11
     IdentityFile ~/.ssh/keys/pcloudy_all
 
-Host test-main-rbox
-    HostName 172.18.21.11
-    User radmin
-    ProxyCommand ssh -W %h:%p my-dc
-    IdentityFile ~/.ssh/keys/pcloudy_all
-
-
 Host test-main-pbox
     HostName 172.18.21.2
     User padmin
     ProxyCommand ssh -W %h:%p my-dc
     IdentityFile ~/.ssh/keys/pcloudy_all
+Host test-main-rbox.01
+    HostName 172.18.21.11
+    User radmin
+    ProxyCommand ssh -W %h:%p my-dc
+    IdentityFile ~/.ssh/keys/pcloudy_all
+Host test-main-rbox.02
+    HostName 172.18.21.12
+    User radmin
+    ProxyCommand ssh -W %h:%p my-dc
+    IdentityFile ~/.ssh/keys/pcloudy_all
+
+Host test-sub-pbox
+    HostName 172.16.118.115
+    User padmin
+    ProxyCommand ssh -W %h:%p my-dc
+    IdentityFile ~/.ssh/keys/pcloudy_all
+Host test-sub-rbox.01
+    HostName 172.16.50.11
+    User radmin
+    ProxyCommand ssh -W %h:%p my-dc
+    IdentityFile ~/.ssh/keys/pcloudy_all
+Host test-sub.rbox.02
+    HostName 172.16.50.158
+    User radmin
+    ProxyCommand ssh -W %h:%p my-dc
+    IdentityFile ~/.ssh/keys/pcloudy_all
+
+
+
 
 # ui-stg.pcloudy.com
 Host ui-stg-rbox
@@ -147,10 +284,11 @@ Host ansible-test-pbox
 
 # node-stg.pcloudy.com
 
-Host node-pbox node.pbox
+Host node.pbox
     HostName 172.24.70.15
     User padmin
     ProxyCommand ssh -W %h:%p my-dc
+    LocalForward 8295 prod-redinator.pcloudy.com:62379
     IdentityFile ~/.ssh/keys/pcloudy_all
 
 Host node-rbox
@@ -175,43 +313,48 @@ Host node-sub-rbox
     IdentityFile ~/.ssh/keys/pcloudy_all
 
 
-
-
-
-
-
-
-
-
 # staging.pcloudy.com
-Host staging-pbox
-    User padmin
-    HostName 10.0.0.5
+Host staging.pbox
+    User radmin
+    HostName 172.24.90.2
     ProxyCommand ssh -W %h:%p my-dc
     IdentityFile ~/.ssh/keys/pcloudy_all
 
-Host staging-rbox-1
+Host staging.rbox.01
     User radmin
-    HostName 10.0.0.145
+    HostName 172.24.90.11
     ProxyCommand ssh -W %h:%p my-dc
     IdentityFile ~/.ssh/keys/pcloudy_all
-Host staging-rbox-2
+Host staging.rbox.02
     User radmin
-    HostName 10.0.0.146
+    HostName 172.24.90.13
+    ProxyCommand ssh -W %h:%p my-dc
+    IdentityFile ~/.ssh/keys/pcloudy_all
+Host staging.db
+    User padmin
+    HostName 172.24.90.3
     ProxyCommand ssh -W %h:%p my-dc
     IdentityFile ~/.ssh/keys/pcloudy_all
 
 
 
 # stagin-sub.pcloudy.com
-Host staging-sub-pbox
+Host staging.sub.pbox
     User padmin
-    HostName 172.16.112.147
+    HostName 172.16.114.147
+    ProxyCommand ssh -W %h:%p my-dc
     IdentityFile ~/.ssh/keys/pcloudy_all
 
-Host staging-sub-rbox
+Host staging.sub.rbox.01
     User radmin
     HostName 172.16.50.158
+    ProxyCommand ssh -W %h:%p my-dc
+    IdentityFile ~/.ssh/keys/pcloudy_all
+
+Host staging.sub.rbox.02
+    User radmin
+    HostName 172.16.50.11
+    ProxyCommand ssh -W %h:%p my-dc
     IdentityFile ~/.ssh/keys/pcloudy_all
 
 
@@ -229,6 +372,17 @@ Host private-test-main-pbox
     ProxyCommand ssh -W %h:%p my-dc
     IdentityFile ~/.ssh/keys/pcloudy_all
 
+Host private.test.sub.pbox
+    User padmin
+    HostName 172.16.114.86
+    ProxyCommand ssh -W %h:%p my-dc
+    IdentityFile ~/.ssh/keys/pcloudy_all
+Host private.test.sub.rbox.01
+    User radmin
+    HostName 172.16.50.11
+    ProxyCommand ssh -W %h:%p my-dc
+    IdentityFile ~/.ssh/keys/pcloudy_all
+
 Host private-test-main-pbox-jubm
     User radmin
     HostName 10.8.16.8
@@ -240,7 +394,6 @@ Host artemesia-pbox
     User padmin
     HostName 172.16.112.35
     IdentityFile ~/.ssh/keys/pcloudy_all
-    LocalForward 8000 127.0.0.1:3306
 
 Host artemesia-rbox
     User radmin
@@ -295,6 +448,7 @@ Host mitmserver-sify
     ProxyCommand ssh -W %h:%p pcloudy_sify_dc
     IdentityFile ~/.ssh/keys/pcloudy_all
 
+# ||============================= DB PORTFORWARDS====================================||
 
 # ||============================= AWS SERVERS ====================================||
 # aws dev ec2 servers
@@ -331,18 +485,38 @@ Host wildnet
     User ubuntu
     HostName 3.6.161.28
     IdentityFile ~/.ssh/keys/WildNet_Prod_Mumbai_Key_Pir.pem
-Host bc-private
+Host bc.private.1
     HostName 13.200.59.3
-    IdentityFile ~/.ssh/keys/BrowserCloudV2_Private_DEV.pem
     user ubuntu
+    IdentityFile ~/.ssh/keys/BrowserCloudV2_Private_DEV.pem
+Host bc.private.2
+    HostName 65.0.117.172
+    user ubuntu
+    IdentityFile ~/.ssh/keys/BrowserCloudV2_mgm.pem
+Host bc.qa
+    HostName 13.127.120.235
+    user ubuntu
+    IdentityFile ~/.ssh/keys/browsercloud-v2-qa-key.pem
 
-Host pr.stg.backend
+Host pr-stg.backend
     HostName 13.202.22.197
     user ubuntu
     IdentityFile ~/.ssh/keys/pcloudy-stg-backend-us.pem
-Host pr.stg.frontend
+    LocalForward 5432 127.0.0.1:5432
+
+Host pr-stg.frontend
     HostName 13.202.129.210
     user ubuntu
     IdentityFile ~/.ssh/keys/pcloudy-stg-frontend-us.pem
+
+Host pr.prod.frontend
+    HostName 35.154.174.157
+    user ubuntu
+    IdentityFile ~/.ssh/keys/pcloudy-pr-prod-key.pem
+
+Host pr.prod.backend
+    HostName 15.207.48.92
+    user ubuntu
+    IdentityFile ~/.ssh/keys/pcloudy-pr-prod-key.pem
 
 
