--- a/.config/git/config
+++ b/.config/git/config
@@ -4,8 +4,12 @@
 	helper = store
 	UseHttpPath = true
 [user]
-	name = kiranyadavm
-	email = 94350938+kiranyadavm@users.noreply.github.com
+	name = knnan
+	email = 28503456+knnan@users.noreply.github.com
+
+[includeIf "gitdir:~/Development/work_code/PCLOUDY/"]
+	path = ~/.config/git/work.config
+
 [diff]
 	colorMoved = default
 
@@ -28,8 +32,7 @@
 	uncommit = reset --soft HEAD~1
 	ls= log --oneline -n 10
 	dlt = !git diff | delta --features side-by-side
-[includeIf "gitdir:~/Development/work_code/PCLOUDY/"]
-	path = ~/.config/git/work.config
+
 [filter "lfs"]
 	smudge = git-lfs smudge -- %f
 	process = git-lfs filter-process
