--- a/.ssh/config.d/personal.config
+++ b/.ssh/config.d/personal.config
@@ -11,7 +11,8 @@ Host github.com
 
 Host mediaserver
     User knnan
-    Hostname 192.168.1.4
+    # Hostname 192.168.1.4
+    Hostname 192.168.0.104
     StrictHostKeyChecking no
     IdentityFile ~/.ssh/keys/mediaserver
 
