changed coloscheme and keybindings for vim and mapped

--- a/.ssh/config.d/work.config
+++ b/.ssh/config.d/work.config
@@ -137,6 +137,17 @@ Host prodindus.pbox
     IdentityFile ~/.ssh/keys/pcloudy_all
 
 
+Host iosstg.pbox
+    User padmin
+    HostName 172.24.60.2
+    ProxyCommand ssh -W %h:%p my-dc
+    IdentityFile ~/.ssh/keys/pcloudy_all
+Host iosstg.rbox.01
+    User radmin
+    HostName 172.24.60.18
+    ProxyCommand ssh -W %h:%p my-dc
+    IdentityFile ~/.ssh/keys/pcloudy_all
+
 Host plive.pbox
     User padmin
     HostName 172.24.80.2
