--- a/.ssh/config.d/work.config
+++ b/.ssh/config.d/work.config
@@ -504,7 +504,7 @@ Host bc.private.2
     HostName 65.0.117.172
     user ubuntu
     IdentityFile ~/.ssh/keys/BrowserCloudV2_mgm.pem
-Host bc.qa
+Host bc.prod
     HostName 13.127.120.235
     user ubuntu
     IdentityFile ~/.ssh/keys/browsercloud-v2-qa-key.pem
