fixed ulancher , changed bat them , chnaged neovim them and upgraded it , add fzf and rg intergration

--- a/.ssh/config.d/work.config
+++ b/.ssh/config.d/work.config
@@ -72,7 +72,7 @@ Host my-dc bastion_sify_1
 # anon-db  => 8002
 # staging.db  => 8003
 
-Host db.portforward
+Host portforward.db
     HostName 10.10.60.34
     User node-team
     IdentityFile ~/.ssh/keys/pcloudy_all
@@ -347,6 +347,12 @@ Host staging.db
     ProxyCommand ssh -W %h:%p my-dc
     IdentityFile ~/.ssh/keys/pcloudy_all
 
+Host staging.flowtest.device
+    User ubuntu
+    HostName 172.16.118.90
+    ProxyCommand ssh -W %h:%p staging.pbox
+    IdentityFile ~/.ssh/keys/flotest_guestvm.pem
+
 
 
 # stagin-sub.pcloudy.com
@@ -508,6 +514,10 @@ Host bc.prod
     HostName 13.127.120.235
     user ubuntu
     IdentityFile ~/.ssh/keys/browsercloud-v2-qa-key.pem
+Host bc.staging
+    HostName 3.110.151.36
+    user ubuntu
+    IdentityFile ~/.ssh/keys/browsercloud-v2-prod-key.pem
 
 Host pr-stg.backend
     HostName 13.202.22.197
