--- a/.config/libinput-gestures.conf
+++ b/.config/libinput-gestures.conf
@@ -1,6 +1,8 @@
-gesture swipe up 3 xdotool key super+s
+# gesture swipe up 3 xdotool key super+s
 gesture swipe down 3 xdotool key super+h
 gesture swipe down 4 xdotool key super+d
+gesture swipe left  3 xdotool key Super+Tab
+gesture swipe right 3 xdotool key Super+Shift+Tab
 gesture swipe up 4 xdotool key Ctrl+F8
 gesture pinch in 2 xdotool key super+Page_Up
 gesture pinch in 2 xdotool key super+Page_Up
