--- a/.ssh/config.d/work.config
+++ b/.ssh/config.d/work.config
@@ -373,6 +373,11 @@ Host staging.sub.rbox.02
     HostName 172.16.50.11
     ProxyCommand ssh -W %h:%p my-dc
     IdentityFile ~/.ssh/keys/pcloudy_all
+Host staging.sub.rbox.03
+    User radmin
+    HostName 172.16.50.42
+    ProxyCommand ssh -W %h:%p my-dc
+    IdentityFile ~/.ssh/keys/pcloudy_all
 
 
 
